hphp/hack/test/typecheck/tests_bypass_visibility/internal_class.php.exp
ERROR: File "internal_class.php--non_test.php", line 5, characters 14-24:
Cannot access an internal element from module `foo` in the default module (Typing[4444])
  File "internal_class.php--foo.php", line 6, characters 16-26:
  This is from module `foo`
